Name:                gnewplot
Version:             0.1
Synopsis:            High-level bindings for gnuplot
Description:         gnewplot is a high-level bindings to Gnuplot, inspired by the picture-language
                     from Structure and Interpretation of Computer Programs.
                     .
                     Any type of data you would like to plot must implement the PlotWithGnuplot class.
                     Plots can be composed and modified by wrapping the data in constructors that alter the style
                     or place plots besides or above each other. 

Homepage:            http://github.com/glutamate/gnewplot
License:             BSD3
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.2


Library
   Exposed-modules:  Graphics.Gnewplot, 
                     Graphics.Gnewplot.Types, 
                     Graphics.Gnewplot.Style,     
                     Graphics.Gnewplot.Panels,
                     Graphics.Gnewplot.Instances,
                     Graphics.Gnewplot.Histogram,
                     Graphics.Gnewplot.Exec   
  
  -- Packages needed in order to build this package.
   Build-depends:  base, random, process, directory, array, storablevector
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  